--- a/SnakesNLadders.ipynb
+++ b/SnakesNLadders.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from sim import *\n",
+    "import snl\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game = Game()\n",
+    "game = snl.Game()\n",
     "game.play(10000)\n",
     "gamelens = [len(x) for x in game.log]\n",
     "cutoff = 200\n",
